# BN-Damage-Classifier

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  bitbucket-pipelines-dp.yml  bitbucket-pipelines.yml  config.yml  deploy_dev.sh  dev.env  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  deploy_dev.sh
data/global_protect/PanGPLinux-6.2.0-c10/: GlobalProtect_deb_arm-6.2.0.1-265.deb  GlobalProtect_focal_deb_arm-6.2.0.1-265.deb  gp_install.sh  gp_uninstall.sh  manifest  relinfo
interface/cli/: comparser.py
interface/rest_api/: app.py
interface/streamlit/: app.py  constants.py  utils.py
logs/gpt_labels/: README.md
logs/processed_rows/: README.md
logs/raw_processed_rows/: README.md
logs/report_ocr_boxes/: README.md
logs/reports/: README.md
logs/user_labels/: README.md
nginx/: nginx.conf
src/: app.py  config.py  router.py  schema.py  utils.py
src/classifier/: config.py  data_agumentation.py  data_generator.py  dataset.py  encoder.py  hyperparameter_tuning.py  inference.py  model.py  train.py  utils.py
src/parser/: errors.py  llm_api.py  ocr.py  pricer.py  utils.py
tests/: test_app.py  test_save_label.py
tests/integration_tests/: delete_non_existing_rows.py  row_map_dataset_test.csv  test_app.py  test_logs.py  test_save_label.py
tests/integration_tests/test_parser/: test_ocr.py
tests/test_parser/: test_ocr.py
tests/unit_tests/: test_dummy.py
